Moved settings to a separate config file

--- a/log.conf
+++ b/log.conf
@@ -18,5 +18,5 @@ datefmt=[%H:%M:%S]
 [handler_logfile]
 class=handlers.RotatingFileHandler
 level=INFO
-args=('snoppbot.log','a','maxBytes=10485760')
+args=('opbot.log','a','maxBytes=1048576')
 formatter=logfileformatter
