--- a/settings.conf
+++ b/settings.conf
@@ -5,3 +5,11 @@ port = IrcPort
 channel = #IrcChannel
 whitelist = ["nick1", "nick2"]
 logconfig = log.conf
+
+[weather]
+cities = ["turku", "åbo", "vaasa", "vasa", "reykjavik"]
+turku = Finland/Western_Finland/Turku
+åbo = Finland/Western_Finland/Turku
+vasa = Finland/Western_Finland/Vaasa
+vaasa = Finland/Western_Finland/Vaasa
+reykjavik = Iceland/Capital_Region/Reykjavik
