fixed bug where whitelist was imported as a string and not a list

--- a/settings.conf
+++ b/settings.conf
@@ -3,6 +3,5 @@ nick = BotNick
 server = Irc.Server
 port = IrcPort
 channel = #IrcChannel
-whitelist = ["nick1", "nick2"]
+whitelist = nick1,nick2
 logconfig = log.conf
-
