Added date to logging, change to new log file after reaching 1 MB.

--- a/log.conf
+++ b/log.conf
@@ -13,10 +13,10 @@ handlers=logfile
 
 [formatter_logfileformatter]
 format=%(asctime)s %(message)s
-datefmt=[%H:%M:%S]
+datefmt=[%d/%m %H:%M:%S]
 
 [handler_logfile]
 class=handlers.RotatingFileHandler
 level=INFO
-args=('opbot.log','a','maxBytes=1048576')
+args=('opbot.log','a',1048576,2)
 formatter=logfileformatter
